# validador-br

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  changelog.md  license  readme.md
src/: funcoes.rs  lib.rs  parser.rs  types.rs  validador.rs  validador_ie.rs
tests/: integrity.rs
